[package]
name = "eip-712-derive"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keccak-hash = "0.5.1"
libsecp256k1 = "0.3.5"
lazy_static = "1.4.0"
clear_on_drop = "0.2.4"

[dev-dependencies]
rand = "0.7.3"
hex = "0.4.2"