[package]
name = "eip-712-derive"
version = "0.3.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keccak-hash = "0.8.0"
libsecp256k1 = "0.7.0"
clear_on_drop = "0.2.4"

[dev-dependencies]
rand = "0.8.4"
hex = "0.4.2"
